--- a/email.html
+++ b/email.html
@@ -1758,44 +1758,16 @@ font-family: Arial, serif !important;
                             <table class="mktoModule" mktoName="2 Col Image Left with Button" id="imgleft1" cellpadding="0" align="center" cellspacing="0" style="margin:0 auto;width:100%;border-collapse: collapse;border-spacing: 0;" border="0" width="100%">
                                 <tr>
                                     <td bgColor="#ffffff" valign="top" style="background-Color:#ffffff;vertical-align: top;">
-                                        <table class="inner_table2" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; width:800px;border-collapse: collapse;border-spacing: 0;" border="0" width="800">
+                                        <table class="inner_table2" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; width:740px;border-collapse: collapse;border-spacing: 0;" border="0" width="740">
                                             <tr>
                                                 <td>
                                                     <table cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;" border="0" width="100%">
                                                         <tr>
-                                                            <th width="50%" align="left" class="block2 center" valign="top" style="vertical-align: top;width:50%;">
-                                                                <div class="mktoImg" mktoname="Image" id="imgleft-img">
-                                                                    <img class="mobileimg" src="https://dummyimage.com/236x235/EEF3F9/B3B8C4" border="0" style="-ms-interpolation-mode:bicubic; border-collapse:collapse; padding:0px; margin:0px auto; border-spacing:0;width:400px;display:block;" />
-                                                                </div>
-                                                            </th>
-                                                            <th width="50%" align="center" width="340" valign="middle" class="block2 top_pad" valign="top" style="vertical-align:middle;text-align: center;width:50%;">
-                                                                <table width="80%" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;width: 80%;" border="0">
+                                                            <th width="45%" align="center" width="340" valign="middle" class="block2 top_pad" valign="top" style="vertical-align:middle;text-align: center;width:45%;">
+                                                                <table bgcolor="#f4f4f4" width="80%" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;width:100%;background-color: #f4f4f4;" border="0">
 
                                                                     <tr>
-                                                                        <td align="center">
-                                                                            <div class="mktoImg" mktoname="Image" id="leftImage-b">
-                                                                                <div>
-                                                                                    <img src="./images/logo-certificate.png" width="40" border="0" style="-ms-interpolation-mode:bicubic;width:40px;border-collapse:collapse; padding:0px; margin:0px auto;border-spacing:0;" />
-                                                                                </div>
-                                                                            </div>
-                                                                        </td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td height="25" style="line-height:1px;font-size:1px;height:25px;">&nbsp;</td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td align="center" style="font-family: 'Montserrat',Arial, sans-serif; font-size:12px; font-weight:400;line-height: 145%; mso-line-height-rule: exactly; color:#ff755e;text-align:center;text-transform: uppercase;">
-                                                                            <div class="mktoText" mktoName="SubHeadline" id="SubHeadline-text">
-                                                                                <div>New collection</div>
-                                                                            </div>
-                                                                        </td>
-                                                                    </tr>
-
-                                                                    <tr>
-                                                                        <td height="10" style="line-height:1px;font-size:1px;height:10px;">&nbsp;</td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td style="font-family: 'Montserrat',Arial, sans-serif; font-size:26px; font-weight:900; line-height: 145%; mso-line-height-rule: exactly; color: #374b53;">
+                                                                        <td style="font-family: 'Montserrat',Arial, sans-serif; font-size:26px; font-weight:900; line-height: 145%; mso-line-height-rule: exactly; color: #374b53;text-align: left;">
                                                                             <div mktoName="Headline" id="imgleft-headline">
                                                                                 <div>NEW ITEM TITLE</div>
                                                                             </div>
@@ -1805,7 +1777,7 @@ font-family: Arial, serif !important;
                                                                         <td height="15" style="line-height:1px;font-size:1px;height:15px;">&nbsp;</td>
                                                                     </tr>
                                                                     <tr>
-                                                                        <td style="font-family: 'Montserrat',Arial, sans-serif; font-size: 14px; font-weight:300;line-height: 145%; mso-line-height-rule: exactly; color:#374b53;">
+                                                                        <td style="font-family: 'Montserrat',Arial, sans-serif; font-size: 14px; font-weight:300;line-height: 145%; mso-line-height-rule: exactly; color:#374b53;text-align: left;">
                                                                             <div mktoName="Text" id="imgleft-copy">
                                                                                 <div>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quas. </div>
                                                                             </div>
@@ -1814,20 +1786,57 @@ font-family: Arial, serif !important;
                                                                     <tr>
                                                                         <td height="15" style="line-height:1px;font-size:1px;height:15px;">&nbsp;</td>
                                                                     </tr>
+
                                                                     <tr>
-                                                                        <td>
-                                                                            <div class="mktoText" id="banner-btns" mktoname="Button">
+                                                                        <td height="15" style="line-height:1px;font-size:1px;height:15px;">&nbsp;</td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <td class="btm_pad3" style="line-height:1px;font-size:1px;">&nbsp;</td>
+                                                                    </tr>
+                                                                </table>
+                                                                <table bgcolor="#ffffff" width="80%" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;width: 80%;background-color:#ffffff" border="0">
+                                                                    <tr>
+                                                                        <td width="20" style="width:20px;">&nbsp;</td>
+                                                                        <td align="left">
+                                                                            <div class="mktoImg" mktoname="Image" id="leftImage-b">
                                                                                 <div>
-                                                                                    <table cellpadding="0" cellspacing="0" border="0" align="center">
-                                                                                        <tbody>
-                                                                                            <tr>
-                                                                                                <td bgcolor="#1a96d3" style="text-align: center; border:1px solid #1a96d3; color:#ffffff; background-color:#1a96d3;text-decoration:none;font-size:12px;font-weight:400;
-                                                                                        line-height:110%; font-family: 'Montserrat',Arial, sans-serif; padding: 15px 26px; border-radius:3px;">
-                                                                                                    <a style="text-decoration:none; color:#ffffff" href="#"><span style="font-size:12px;"> ▶</span>&nbsp;&nbsp;EXPLORE NOW</a>
-                                                                                                </td>
-                                                                                            </tr>
-                                                                                        </tbody>
-                                                                                    </table>
+                                                                                    <img src="./images/triangle-grey.png" width="40" border="0" style="-ms-interpolation-mode:bicubic;width:40px;border-collapse:collapse; padding:0px; margin:0px auto;border-spacing:0;" />
+                                                                                </div>
+                                                                            </div>
+                                                                        </td>
+                                                                    </tr>
+
+                                                                </table>
+                                                            </th>
+                                                            <th width="45%" align="center" width="340" valign="middle" class="block2 top_pad" valign="top" style="vertical-align:middle;text-align: center;width:45%;">
+                                                                <table bgcolor="#1a96d3" width="80%" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;width:100%;background-color: #1a96d3;" border="0">
+
+                                                                    <tr>
+                                                                        <td style="font-family: 'Montserrat',Arial, sans-serif; font-size:26px; font-weight:900; line-height: 145%; mso-line-height-rule: exactly; color: #374b53;text-align: left;">
+                                                                            <div mktoName="Headline" id="imgleft-headline">
+                                                                                <div>NEW ITEM TITLE</div>
+                                                                            </div>
+                                                                        </td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <td height="15" style="line-height:1px;font-size:1px;height:15px;">&nbsp;</td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <td style="font-family: 'Montserrat',Arial, sans-serif; font-size: 14px; font-weight:300;line-height: 145%; mso-line-height-rule: exactly; color:#374b53;text-align: left;">
+                                                                            <div mktoName="Text" id="imgleft-copy">
+                                                                                <div>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quas. </div>
+                                                                            </div>
+                                                                        </td>
+                                                                    </tr>
+
+                                                                </table>
+                                                                <table bgcolor="#ffffff" width="80%" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;width: 80%;background-color:#ffffff" border="0">
+                                                                    <tr>
+                                                                        <td width="20" style="width:20px;">&nbsp;</td>
+                                                                        <td align="left">
+                                                                            <div class="mktoImg" mktoname="Image" id="leftImage-b">
+                                                                                <div>
+                                                                                    <img src="./images/triangle-blue.png" width="40" border="0" style="-ms-interpolation-mode:bicubic;width:40px;border-collapse:collapse; padding:0px; margin:0px auto;border-spacing:0;" />
                                                                                 </div>
                                                                             </div>
                                                                         </td>
