--- a/email.html
+++ b/email.html
@@ -1763,13 +1763,13 @@ font-family: Arial, serif !important;
                                                 <td>
                                                     <table cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;" border="0" width="100%">
                                                         <tr>
-                                                            <th width="45%" align="center" width="340" valign="middle" class="block2 top_pad" valign="top" style="vertical-align:middle;text-align: center;width:45%;">
+                                                            <th width="40%" align="center" width="340" valign="middle" class="block2 top_pad" valign="top" style="vertical-align:middle;text-align: center;width:40%;">
                                                                 <table bgcolor="#f4f4f4" width="80%" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;width:100%;background-color: #f4f4f4;" border="0">
 
                                                                     <tr>
-                                                                        <td style="font-family: 'Montserrat',Arial, sans-serif; font-size:26px; font-weight:900; line-height: 145%; mso-line-height-rule: exactly; color: #374b53;text-align: left;">
+                                                                        <td style="font-family: 'Montserrat',Arial, sans-serif; font-size:15px; font-weight:700; line-height: 145%; mso-line-height-rule: exactly; color: #1a96d3;text-align: left;">
                                                                             <div mktoName="Headline" id="imgleft-headline">
-                                                                                <div>NEW ITEM TITLE</div>
+                                                                                <div>EMAIL DEVELOPMENT <span style="float:right;font-size:12px;">★★★★★</span></div>
                                                                             </div>
                                                                         </td>
                                                                     </tr>
@@ -1794,9 +1794,9 @@ font-family: Arial, serif !important;
                                                                         <td class="btm_pad3" style="line-height:1px;font-size:1px;">&nbsp;</td>
                                                                     </tr>
                                                                 </table>
-                                                                <table bgcolor="#ffffff" width="80%" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;width: 80%;background-color:#ffffff" border="0">
+                                                                <table bgcolor="#ffffff" width="90%" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;width: 90%;background-color:#ffffff" border="0">
                                                                     <tr>
-                                                                        <td width="20" style="width:20px;">&nbsp;</td>
+                                                                        <td width="1" style="width:1px;">&nbsp;</td>
                                                                         <td align="left">
                                                                             <div class="mktoImg" mktoname="Image" id="leftImage-b">
                                                                                 <div>
@@ -1805,16 +1805,15 @@ font-family: Arial, serif !important;
                                                                             </div>
                                                                         </td>
                                                                     </tr>
-
                                                                 </table>
                                                             </th>
-                                                            <th width="45%" align="center" width="340" valign="middle" class="block2 top_pad" valign="top" style="vertical-align:middle;text-align: center;width:45%;">
-                                                                <table bgcolor="#1a96d3" width="80%" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;width:100%;background-color: #1a96d3;" border="0">
-
+                                                            <th class="hidden3" style="font-size:1px; line-height: 1px;width:4%" width="4%">&nbsp;</th>
+                                                            <th width="40%" align="center" width="340" valign="middle" class="block2 top_pad" valign="top" style="vertical-align:middle;text-align: center;width:40%;">
+                                                                <table bgcolor="#1a96d3" width="80%" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;width:100%;background-color:#1a96d3;" border="0">
                                                                     <tr>
-                                                                        <td style="font-family: 'Montserrat',Arial, sans-serif; font-size:26px; font-weight:900; line-height: 145%; mso-line-height-rule: exactly; color: #374b53;text-align: left;">
+                                                                        <td style="font-family: 'Montserrat',Arial, sans-serif; font-size:15px; font-weight:700; line-height: 145%; mso-line-height-rule: exactly; color: #ffffff;text-align: left;">
                                                                             <div mktoName="Headline" id="imgleft-headline">
-                                                                                <div>NEW ITEM TITLE</div>
+                                                                                <div>EMAIL DESIGN <span style="float:right;font-size:12px;">★★★★★</span></div>
                                                                             </div>
                                                                         </td>
                                                                     </tr>
@@ -1822,17 +1821,26 @@ font-family: Arial, serif !important;
                                                                         <td height="15" style="line-height:1px;font-size:1px;height:15px;">&nbsp;</td>
                                                                     </tr>
                                                                     <tr>
-                                                                        <td style="font-family: 'Montserrat',Arial, sans-serif; font-size: 14px; font-weight:300;line-height: 145%; mso-line-height-rule: exactly; color:#374b53;text-align: left;">
+                                                                        <td style="font-family: 'Montserrat',Arial, sans-serif; font-size: 14px; font-weight:300;line-height: 145%; mso-line-height-rule: exactly; color:#ffffff;text-align: left;">
                                                                             <div mktoName="Text" id="imgleft-copy">
                                                                                 <div>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quas. </div>
                                                                             </div>
                                                                         </td>
                                                                     </tr>
-
-                                                                </table>
-                                                                <table bgcolor="#ffffff" width="80%" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;width: 80%;background-color:#ffffff" border="0">
                                                                     <tr>
-                                                                        <td width="20" style="width:20px;">&nbsp;</td>
+                                                                        <td height="15" style="line-height:1px;font-size:1px;height:15px;">&nbsp;</td>
+                                                                    </tr>
+
+                                                                    <tr>
+                                                                        <td height="15" style="line-height:1px;font-size:1px;height:15px;">&nbsp;</td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <td class="btm_pad3" style="line-height:1px;font-size:1px;">&nbsp;</td>
+                                                                    </tr>
+                                                                </table>
+                                                                <table bgcolor="#ffffff" width="90%" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;width: 90%;background-color:#ffffff" border="0">
+                                                                    <tr>
+                                                                        <td width="1" style="width:1px;">&nbsp;</td>
                                                                         <td align="left">
                                                                             <div class="mktoImg" mktoname="Image" id="leftImage-b">
                                                                                 <div>
@@ -1840,12 +1848,6 @@ font-family: Arial, serif !important;
                                                                                 </div>
                                                                             </div>
                                                                         </td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td height="15" style="line-height:1px;font-size:1px;height:15px;">&nbsp;</td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td class="btm_pad3" style="line-height:1px;font-size:1px;">&nbsp;</td>
                                                                     </tr>
                                                                 </table>
                                                             </th>
