--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ font-family: Arial, serif !important;
     <meta name="format-detection" content="address=no" />
     <meta name="format-detection" content="email=no" />
     <meta name="x-apple-disable-message-reformatting">
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700;800;900&display=swap" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,700;0,800;0,900;1,300&display=swap');
     </style>
@@ -439,9 +439,9 @@ font-family: Arial, serif !important;
                                                                                                 <tr>
                                                                                                     <td align="left">
                                                                                                         <form method="get" action="https://sergechurkin-ca.github.io/portfolio/" style="padding-left:10px;">
-                                                                                                            <input type="text" name="s" placeholder="Search..." width="150" style="background-color: #ffffff; border: 0; font-size: 14px; line-height:16px; padding-left:5px; color:#5f6f75; font-family: 'Montserrat', Helvetica, Arial, sans-serif;outline:none;width:100px;"
+                                                                                                            <input type="text" name="s" title="this is placeholder" placeholder="Search..." width="150" style="background-color: #ffffff; border: 0; font-size: 14px; line-height:16px; padding-left:5px; color:#5f6f75; font-family: 'Montserrat', Helvetica, Arial, sans-serif;outline:none;width:100px;"
                                                                                                                 placeholdercolor="#adadad" />
-                                                                                                            <input type="submit" id="search" value="search" style="display:none;" target="_blank" />
+                                                                                                            <input type="submit" title="this is placeholder" id="search" value="search" style="display:none;" />
                                                                                                         </form>
                                                                                                     </td>
                                                                                                     <td align="right" style="padding: 0 10px;">
@@ -952,9 +952,9 @@ font-family: Arial, serif !important;
                                                                 </table>
                                                                 <table cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;" border="0" width="100%">
                                                                     <tr>
-                                                                        <tr>
-                                                                            <td height="10" style="line-height:1px;font-size:1px;height:10px;">&nbsp;</td>
-                                                                        </tr>
+                                                                        <td height="10" style="line-height:1px;font-size:1px;height:10px;">&nbsp;</td>
+                                                                    </tr>
+                                                                    <tr>
                                                                         <td align="left" style="font-family: 'Montserrat',Arial, sans-serif; font-size: 14px; font-weight:400;line-height: 145%; mso-line-height-rule: exactly; color:#ffffff; text-align:left;">
                                                                             <div id="Copy1a">
                                                                                 <div>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</div>
@@ -982,7 +982,6 @@ font-family: Arial, serif !important;
                                                                     </tr>
                                                                 </table>
                                                                 <table cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;" border="0" width="100%">
-
                                                                     <tr>
                                                                         <tr>
                                                                             <td height="10" style="line-height:1px;font-size:1px;height:10px;">&nbsp;</td>
@@ -1020,9 +1019,9 @@ font-family: Arial, serif !important;
                                                                 </table>
                                                                 <table cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;" border="0" width="100%">
                                                                     <tr>
-                                                                        <tr>
-                                                                            <td height="10" style="line-height:1px;font-size:1px;height:10px;">&nbsp;</td>
-                                                                        </tr>
+                                                                        <td height="10" style="line-height:1px;font-size:1px;height:10px;">&nbsp;</td>
+                                                                    </tr>
+                                                                    <tr>
                                                                         <td align="left" style="font-family: 'Montserrat',Arial, sans-serif; font-size: 14px; font-weight:400;line-height: 145%; mso-line-height-rule: exactly; color:#ffffff; text-align:left;">
                                                                             <div id="Copy3">
                                                                                 <div>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</div>
@@ -1052,9 +1051,9 @@ font-family: Arial, serif !important;
                                                                 </table>
                                                                 <table cellpadding="0" cellspacing="0" align="center" style="margin:0 auto; border-collapse: collapse;border-spacing: 0;" border="0" width="100%">
                                                                     <tr>
-                                                                        <tr>
-                                                                            <td height="10" style="line-height:1px;font-size:1px;height:10px;">&nbsp;</td>
-                                                                        </tr>
+                                                                        <td height="10" style="line-height:1px;font-size:1px;height:10px;">&nbsp;</td>
+                                                                    </tr>
+                                                                    <tr>
                                                                         <td align="left" style="font-family: 'Montserrat',Arial, sans-serif; font-size: 14px; font-weight:400;line-height: 145%; mso-line-height-rule: exactly; color:#ffffff; text-align:left;">
                                                                             <div id="Copy4">
                                                                                 <div>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</div>
