found unclosed tag

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ font-family: Arial, serif !important;
                                                                         <td width="15" class="mobile" style="line-height:1px;font-size:1px;display: none;width:15px;">&nbsp;</td>
                                                                         <td style="font-family: 'Montserrat',Arial, sans-serif; font-size:14px;font-weight: 600; line-height: 125%; mso-line-height-rule: exactly; color:#ffffff;text-align:right;">
                                                                             <div id="phone-number">
-                                                                                <a href="tel:123-456-7890" target="_blank" style="color:#ffffff; text-decoration:none;"> 123-456-7890</a>
+                                                                                <a href="tel:123-456-7890" target="_blank" style="color:#ffffff; text-decoration:none;">123-456-7890</a>
                                                                             </div>
                                                                         </td>
                                                                     </tr>
@@ -484,7 +484,7 @@ font-family: Arial, serif !important;
                                                                         <td width="15" class="mobile" style="line-height:1px;font-size:1px;display: none;width:15px;">&nbsp;</td>
                                                                         <td style="font-family: 'Montserrat',Arial, sans-serif; font-size:14px; font-weight:600; line-height: 125%; mso-line-height-rule: exactly; color:#ffffff;text-align:right;">
                                                                             <div id="login">
-                                                                                <div>LOGIN</div>
+                                                                                <a href="https://sergechurkin-ca.github.io/portfolio/" target="_blank" style="color:#ffffff;text-decoration: none;">LOGIN</a>
                                                                             </div>
                                                                         </td>
                                                                     </tr>
