hosting images on maichimp

--- a/index.html
+++ b/index.html
@@ -418,7 +418,8 @@ font-family: Arial, serif !important;
                                                                     <tr>
                                                                         <td align="left" style="text-align:left;">
                                                                             <div>
-                                                                                <a href="#" target="_blank"><img class="logowidthl" alt="logo" src="images/logo-transparent.png" width="120" border="0" style="max-width:120px;width:120px;" /></a>
+                                                                                <a href="#" target="_blank"><img class="logowidthl" alt="logo" src="https://mcusercontent.com/6bdab5bf7b382ad58a94a5a71/images/ca2f6fbc-1494-af1e-9a17-ff0e9c4b0778.png" width="120" border="0" style="max-width:120px;width:120px;"
+                                                                                    /></a>
                                                                             </div>
                                                                         </td>
                                                                     </tr>
